Started a list of compatible RFID readers

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
 http://spqr.cs.umass.edu/moo
 
 For licensing information, see license.txt.
+
+
+= List of Compatible Readers =
+
+* Impinj Speedway
+* ThingMagic Mercury 5
