Finishing removing those unnecessary binary files that I added in my previous commit.

--- a/README
+++ b/README
@@ -2,6 +2,10 @@ http://spqr.cs.umass.edu/moo
 
 For licensing information, see license.txt.
 
+You may want to use the sample project for IAR 5.20 that we provide:
+
+umassmoo.eww
+hw_Moo1.1.c
 
 = List of Compatible Readers =
 
