clean up after renaming hw_Moo1.1.c to moo.c

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ For licensing information, see license.txt.
 You may want to use the sample project for IAR 5.20 that we provide:
 
 umassmoo.eww
-hw_Moo1.1.c
+moo.c
 
 = List of Compatible Readers =
 
