README updates (more readers, more descriptive)

--- a/README
+++ b/README
@@ -2,12 +2,14 @@ http://spqr.cs.umass.edu/moo
 
 For licensing information, see license.txt.
 
-You may want to use the sample project for IAR 5.20 that we provide:
-
-umassmoo.eww
-moo.c
+This code is known to work only with IAR Embedded Workbench, including the
+Kickstart (code size limited) edition available from TI.
 
 = List of Compatible Readers =
 
 * Impinj Speedway
+* Impinj Speedway Revolution
 * ThingMagic Mercury 5
+* ThingMagic Mercury 5e
+* ThingMagic Mercury 6
+* Michael Buettner's GNU Radio gen2_rfid reader (YMMV)
